--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 
+<html lang="en-US">
+<meta charset="UTF-8">
+
 <html>
 	<head>
+		<!-- FONTS -->
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
@@ -32,7 +38,7 @@
 		<div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
-		        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
 		        	<span class="sr-only">Toggle navigation</span>
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
@@ -44,7 +50,7 @@
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
-		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		    <div class="collapse navbar-collapse" id="navbar-collapse">
 		        <ul class="nav navbar-nav">
 		        	<li class="active"><a href="#">Link</a></li>
 		        	<li><a href="#">Link</a></li>
@@ -62,12 +68,7 @@
 				        </ul>
 			        </li>
 		        </ul>
-		        <form class="navbar-form navbar-left" role="search">
-		        	<div class="form-group">
-		          	    <input type="text" class="form-control" placeholder="Search">
-		        	</div>
-		        	<button type="submit" class="btn btn-default">Submit</button>
-		        </form>
+
 		      	<ul class="nav navbar-nav navbar-right">
 			        <li><a href="#">Link</a></li>
 			        <li class="dropdown">
