--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <html>
 	<head>
+		<title>Department of Computer Science | Home </title>
 		<!-- FONTS -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
@@ -43,6 +44,10 @@
 	</head>
 
 	<body>
+	<div id="netscape">
+		<h1> I don't even know why you're using netscape</h1>
+	</div>
+
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="container-fluid">
 			    <!-- Brand and toggle get grouped for better mobile display -->
