--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</head>
 
 	<body>
-	<div id="netscape">
+	<div id="netscape" style="opacity:0;">
 		<h1> I don't even know why you're using netscape</h1>
 	</div>
 
@@ -69,12 +69,16 @@
 			        	<li class="active"><a href="#">Link</a></li>
 			        	<li><a href="#">Link</a></li>
 			        	<li class="dropdown">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
 
 				          	<ul class="dropdown-menu" role="menu">
-					            <li><a href="#">Action</a></li>
-					            <li><a href="#">Another action</a></li>
-					            <li><a href="#">Something else here</a></li>
+					            <li><a href="#">BTT1DG</a></li>
+					            <li><a href="#">ICS2DG</a></li>
+					            <li><a href="#">ICS2O1</a></li>
+					            <li><a href="#">ICS3U1</a></li>
+					            <li><a href="#">ICS3C1</a></li>
+					            <li><a href="#">ICS4U1</a></li>
+					            <li><a href="#">ICS4C1</a></li>
 					            <li class="divider"></li>
 					            <li><a href="#">Separated link</a></li>
 					            <li class="divider"></li>
