--- a/index.html
+++ b/index.html
@@ -56,49 +56,86 @@
 				        <span class="icon-bar"></span>
 				    </button>
 			        
-			        <a class="navbar-brand" href="#">Markville Computer Science</a>
+			        <a class="navbar-brand" href="index.html">Markville Computer Science</a>
 			    
 			    </div>
 
 			    <!-- Collect the nav links, forms, and other content for toggling -->
 			    <div class="collapse navbar-collapse" id="navbar-collapse">
 			        <ul class="nav navbar-nav">
-			        	<li class="active"><a href="#">Link</a></li>
-			        	<li><a href="#">Link</a></li>
+			        	<li class="active"><a href="index.html">Home</a></li>
+			        	<li><a href="resources.html">Resources</a></li>
+			        	<li><a href="opportunities.html">Opportunities</a></li>
 			        	<li class="dropdown">
 				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
 
 				          	<ul class="dropdown-menu" role="menu">
 					            <li><a href="#">BTT1DG</a></li>
+					            <li class="divider"></li>
 					            <li><a href="#">ICS2DG</a></li>
 					            <li><a href="#">ICS2O1</a></li>
 					            <li><a href="#">ICS3U1</a></li>
 					            <li><a href="#">ICS3C1</a></li>
 					            <li><a href="#">ICS4U1</a></li>
 					            <li><a href="#">ICS4C1</a></li>
-					            <li class="divider"></li>
-					            <li><a href="#">Separated link</a></li>
-					            <li class="divider"></li>
-					            <li><a href="#">One more separated link</a></li>
+					        </ul>
+				        </li>
+				        <li class="dropdown">
+				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
+
+				          	<ul class="dropdown-menu" role="menu">
+					          	<li><a href="#">Robotics</a></li>
+					          	<li class="divider"></li>
+					            <li><a href="#">HTML</a></li>
+					            <li><a href="#">Turing</a></li>
+					            <li><a href="#">Java</a></li>
+					            <li><a href="#">Android</a></li>
 					        </ul>
 				        </li>
 			        </ul>
 
 			      	<ul class="nav navbar-nav navbar-right">
 				        <li><a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/computers.htm">CompSci Original Site</a></li>
-				        <li class="dropdown">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-				            <ul class="dropdown-menu" role="menu">
-					            <li><a href="#">Action</a></li>
-					            <li><a href="#">Another action</a></li>
-					            <li><a href="#">Something else here</a></li>
-					            <li class="divider"></li>
-					            <li><a href="#">Separated link</a></li>
-				            </ul>
-				        </li>
+				        <li><a href="compsci.html">Why Computer Science?</a></li>
 			      	</ul>
 			    </div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
+
+		<!-- END NAV -->
+
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		  <!-- Indicators -->
+		    <ol class="carousel-indicators">
+			    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+			    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+		    </ol>
+
+		  <!-- Wrapper for slides -->
+		    <div class="carousel-inner">
+		    	<div class="item active">
+		        	<img src="..." alt="...">
+		      		<div class="carousel-caption">
+
+		     		</div>
+		    	</div>
+			    <div class="item">
+			      	<img src="..." alt="...">
+			      	<div class="carousel-caption">
+
+			    </div>
+		    </div>
+
+		</div>
+
+		  <!-- Controls -->
+		<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left"></span>
+		</a>
+		<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right"></span>
+		</a>
+		</div>
 	</body>
 </html>
