--- a/courses.html
+++ b/courses.html
@@ -5,7 +5,7 @@
 
 <html>
 	<head>
-		<title>Home | Department of Computer Science </title>
+		<title>Department of Computer Science | Home </title>
 		<!-- FONTS -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
@@ -86,12 +86,11 @@
 
 				          	<ul class="dropdown-menu" role="menu">
 					          	<li><a href="#">Robotics</a></li>
+					          	<li class="divider"></li>
 					            <li><a href="#">HTML</a></li>
 					            <li><a href="#">Turing</a></li>
 					            <li><a href="#">Java</a></li>
 					            <li><a href="#">Android</a></li>
-					            <li class="divider"></li>
-					            <li><a href="gallery.html">View All &raquo;</a></li>
 					        </ul>
 				        </li>
 			        </ul>
