--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 
 <html>
 	<head>
-		<title>Home | Department of Computer Science </title>
+		<title>Gallery | Department of Computer Science</title>
 		<!-- FONTS -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
@@ -71,17 +71,16 @@
 
 				          	<ul class="dropdown-menu" role="menu">
 					            <li><a href="#">BTT1DG</a></li>
+					            <li class="divider"></li>
 					            <li><a href="#">ICS2DG</a></li>
 					            <li><a href="#">ICS2O1</a></li>
 					            <li><a href="#">ICS3U1</a></li>
 					            <li><a href="#">ICS3C1</a></li>
 					            <li><a href="#">ICS4U1</a></li>
 					            <li><a href="#">ICS4C1</a></li>
-					            <li class="divider"></li>
-					            <li><a href="courses.html">View all &raquo;</a></li>
 					        </ul>
 				        </li>
-				        <li class="dropdown">
+				        <li class="dropdown active">
 				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
 				          	<ul class="dropdown-menu" role="menu">
