--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,7 @@
 
 <html>
 	<head>
-		<title>Home | Department of Computer Science </title>
+		<title>Resources | Department of Computer Science </title>
 		<!-- FONTS -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
@@ -69,7 +69,7 @@
 			        	<li class="dropdown">
 				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
 
-				          	<ul class="dropdown-menu" role="menu">
+					        <ul class="dropdown-menu" role="menu">
 					            <li><a href="#">BTT1DG</a></li>
 					            <li><a href="#">ICS2DG</a></li>
 					            <li><a href="#">ICS2O1</a></li>
