--- a/opportunities.html
+++ b/opportunities.html
@@ -71,13 +71,14 @@
 
 				          	<ul class="dropdown-menu" role="menu">
 					            <li><a href="#">BTT1DG</a></li>
-					            <li class="divider"></li>
 					            <li><a href="#">ICS2DG</a></li>
 					            <li><a href="#">ICS2O1</a></li>
 					            <li><a href="#">ICS3U1</a></li>
 					            <li><a href="#">ICS3C1</a></li>
 					            <li><a href="#">ICS4U1</a></li>
 					            <li><a href="#">ICS4C1</a></li>
+					            <li class="divider"></li>
+					            <li><a href="courses.html">View all &raquo;</a></li>
 					        </ul>
 				        </li>
 				        <li class="dropdown">
