--- a/gallery.html
+++ b/gallery.html
@@ -68,16 +68,16 @@
 			        	<li><a href="opportunities.html">Opportunities</a></li>
 			        	<li class="dropdown">
 				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
-
 				          	<ul class="dropdown-menu" role="menu">
 					            <li><a href="#">BTT1DG</a></li>
-					            <li class="divider"></li>
 					            <li><a href="#">ICS2DG</a></li>
 					            <li><a href="#">ICS2O1</a></li>
 					            <li><a href="#">ICS3U1</a></li>
 					            <li><a href="#">ICS3C1</a></li>
 					            <li><a href="#">ICS4U1</a></li>
 					            <li><a href="#">ICS4C1</a></li>
+					            <li class="divider"></li>
+					            <li><a href="courses.html">View all &raquo;</a></li>
 					        </ul>
 				        </li>
 				        <li class="dropdown active">
