--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
+		<link href="styles.css" rel='stylesheet'>
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.4.0/holder.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/nicescroll/3.5.4/jquery.nicescroll.min.js"></script>
 
 		<script>
 		$(function() {
-		  $('a[href*=#]:not([href=#])').click(function() {
+		  $('a[href*=#]:not([href=#]):not([href=#carousel])').click(function() {
 		    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
 		      var target = $(this.hash);
 		      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
@@ -31,6 +34,14 @@
 		    }
 		  });
 		});
+		</script>
+		<script>
+			$(document).ready(
+			function() {
+			$("html").niceScroll({cursorcolor:"#0A0A10", cursorborder:"1px solid #A3A3A3", cursoropacitymin:0.1});;
+			}
+			);
+
 		</script>
 
 		<script language="JavaScript">
@@ -45,99 +56,126 @@
 
 	<body>
 
-		<nav class="navbar navbar-default" role="navigation">
-			<div class="container-fluid">
-			    <!-- Brand and toggle get grouped for better mobile display -->
-			    <div class="navbar-header">
-			        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-			        	<span class="sr-only">Toggle navigation</span>
-				        <span class="icon-bar"></span>
-				        <span class="icon-bar"></span>
-				        <span class="icon-bar"></span>
-				    </button>
-			        
-			        <a class="navbar-brand" href="index.html">Markville Computer Science</a>
-			    
-			    </div>
+		<div class="navbar-wrapper">
+		    <div class="container">
+		        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+		            <div class="container">
+			            <div class="navbar-header">
+			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				                <span class="sr-only">Toggle navigation</span>
+				                <span class="icon-bar"></span>
+				                <span class="icon-bar"></span>
+				                <span class="icon-bar"></span>
+			                </button>
+			                <a class="navbar-brand" href="#">Markville Computer Science</a>
+			            </div>
+			            <div class="navbar-collapse collapse">
+			                <ul class="nav navbar-nav">
+				        	<li class="active"><a href="index.html">Home</a></li>
+				        	<li><a href="resources.html">Resources</a></li>
+				        	<li><a href="opportunities.html">Opportunities</a></li>
 
-			    <!-- Collect the nav links, forms, and other content for toggling -->
-			    <div class="collapse navbar-collapse" id="navbar-collapse">
-			        <ul class="nav navbar-nav">
-			        	<li class="active"><a href="index.html">Home</a></li>
-			        	<li><a href="resources.html">Resources</a></li>
-			        	<li><a href="opportunities.html">Opportunities</a></li>
-			        	<li class="dropdown">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
+			                </ul>
+			                <ul class="nav navbar-nav navbar-right">
+			             		<li class="dropdown">
+				                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
+						          	<ul class="dropdown-menu" role="menu">
+							            <li><a href="#">BTT1DG</a></li>
+							            <li><a href="#">ICS2DG</a></li>
+							            <li><a href="#">ICS2O1</a></li>
+							            <li><a href="#">ICS3U1</a></li>
+							            <li><a href="#">ICS3C1</a></li>
+							            <li><a href="#">ICS4U1</a></li>
+							            <li><a href="#">ICS4C1</a></li>
+							            <li class="divider"></li>
+							            <li><a href="courses.html">View all &raquo;</a></li>
+							        </ul>
+				                </li>
+				                <li class="dropdown">
+						            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
-				          	<ul class="dropdown-menu" role="menu">
-					            <li><a href="#">BTT1DG</a></li>
-					            <li><a href="#">ICS2DG</a></li>
-					            <li><a href="#">ICS2O1</a></li>
-					            <li><a href="#">ICS3U1</a></li>
-					            <li><a href="#">ICS3C1</a></li>
-					            <li><a href="#">ICS4U1</a></li>
-					            <li><a href="#">ICS4C1</a></li>
-					            <li class="divider"></li>
-					            <li><a href="courses.html">View all &raquo;</a></li>
-					        </ul>
-				        </li>
-				        <li class="dropdown">
-				            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
+						          	<ul class="dropdown-menu" role="menu">
+							          	<li><a href="#">Robotics</a></li>
+							          	<li class="divider"></li>
+							            <li><a href="#">HTML</a></li>
+							            <li><a href="#">Turing</a></li>
+							            <li><a href="#">Java</a></li>
+							            <li><a href="#">Android</a></li>
+							        </ul>
+						        </li>
 
-				          	<ul class="dropdown-menu" role="menu">
-					          	<li><a href="#">Robotics</a></li>
-					            <li><a href="#">HTML</a></li>
-					            <li><a href="#">Turing</a></li>
-					            <li><a href="#">Java</a></li>
-					            <li><a href="#">Android</a></li>
-					            <li class="divider"></li>
-					            <li><a href="gallery.html">View All &raquo;</a></li>
-					        </ul>
-				        </li>
-			        </ul>
-
-			      	<ul class="nav navbar-nav navbar-right">
-				        <li><a href="http://schools.yrdsb.ca/markville.ss/teacher/computers/computers.htm">CompSci Original Site</a></li>
-				        <li><a href="compsci.html">Why Computer Science?</a></li>
-			      	</ul>
-			    </div><!-- /.navbar-collapse -->
-			</div><!-- /.container-fluid -->
-		</nav>
-
+			                </ul>
+			            </div>
+			        </div>
+		        </div>
+		      </div>
+		    </div>
 		<!-- END NAV -->
 
-		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		<div id="carousel" class="carousel slide shadow" data-ride="carousel">
 		  <!-- Indicators -->
 		    <ol class="carousel-indicators">
-			    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+			    <li data-target="#carousel" data-slide-to="1"></li>
+			    <li data-target="#carousel" data-slide-to="2"></li>
 		    </ol>
 
 		  <!-- Wrapper for slides -->
 		    <div class="carousel-inner">
 		    	<div class="item active">
-		        	<img src="..." alt="...">
+		        	<img src="holder.js/1200x500" alt="...">
 		      		<div class="carousel-caption">
-
+		      		....
 		     		</div>
 		    	</div>
 			    <div class="item">
-			      	<img src="..." alt="...">
+			      	<img src="holder.js/1200x500" alt="...">
 			      	<div class="carousel-caption">
+			      	....
+			    	</div>
+		    	</div>
+			    <div class="item">
+			      	<img src="holder.js/1200x500" alt="...">
+			      	<div class="carousel-caption">
+			      	....
+			    	</div>
+		    	</div>
 
-			    </div>
-		    </div>
-
-		</div>
+			</div>
 
 		  <!-- Controls -->
-		<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-		    <span class="glyphicon glyphicon-chevron-left"></span>
-		</a>
-		<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-		    <span class="glyphicon glyphicon-chevron-right"></span>
-		</a>
+			<a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+			    <span class="glyphicon glyphicon-chevron-left"></span>
+			</a>
+			<a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+			    <span class="glyphicon glyphicon-chevron-right"></span>
+			</a>
 		</div>
+
+
+	    <div class="container marketing">
+
+	      <!-- Three columns of text below the carousel -->
+	        <div class="row">
+		        <div class="col-md-4">
+		            <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+		            <h2>Heading</h2>
+		            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+		            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		        </div><!-- /.col-lg-4 -->
+	        	<div class="col-md-4">
+	          		<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+	          		<h2>Heading</h2>
+	          		<p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+	          		<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+	        	</div><!-- /.col-lg-4 -->
+	        	<div class="col-md-4">
+	          		<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+	          		<h2>Heading</h2>
+	          		<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+	          		<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+	        	</div><!-- /.col-lg-4 -->
+	        </div><!-- /.row -->
+	    </div>
 	</body>
 </html>
