--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				                <span class="icon-bar"></span>
 				                <span class="icon-bar"></span>
 			                </button>
-			                <a class="navbar-brand" href="#">Markville Computer Science</a>
+			                <a class="navbar-brand" href="#">Markville CompSci</a>
 			            </div>
 			            <div class="navbar-collapse collapse">
 			                <ul class="nav navbar-nav">
