--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		    	<div class="item active">
 		        	<img src="holder.js/1200x500" alt="...">
 		      		<div class="carousel-caption">
-		      		....
+		      		.AAAAAAAALOLCKOAKDWAODAWODJWAJDk <button class="btn btn-default">adauiwdhawdnow</button>
 		     		</div>
 		    	</div>
 			    <div class="item">
