--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
 	<head>
 		<title>Home | Department of Computer Science </title>
 		<!-- FONTS -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+		<link href="css/fontawesome.css" rel="stylesheet">
 
 		<link href="styles.css" rel='stylesheet'>
-		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap.css" rel="stylesheet">
 
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.4.0/holder.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/nicescroll/3.5.4/jquery.nicescroll.min.js"></script>
+		<script src="js/jquery.js"></script>
+		<script src="js/bootstrap.js"></script>
+		<script src="js/holder.js"></script>
+		<script src="js/nicescroll.js"></script>
 
 		<script>
 		$(function() {
@@ -58,7 +56,7 @@
 
 		<div class="navbar-wrapper">
 		    <div class="container">
-		        <div class="navbar navbar-default navbar-static-top" role="navigation">
+		        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		            <div class="container">
 			            <div class="navbar-header">
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -74,6 +72,18 @@
 				        	<li class="active"><a href="index.html">Home</a></li>
 				        	<li><a href="resources.html">Resources</a></li>
 				        	<li><a href="opportunities.html">Opportunities</a></li>
+				        	<li class="dropdown">
+						        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
+
+					          	<ul class="dropdown-menu" role="menu">
+						          	<li><a href="#">Robotics</a></li>
+						          	<li class="divider"></li>
+						            <li><a href="#">HTML</a></li>
+						            <li><a href="#">Turing</a></li>
+						            <li><a href="#">Java</a></li>
+						            <li><a href="#">Android</a></li>
+						        </ul>
+					        </li>
 
 			                </ul>
 			                <ul class="nav navbar-nav navbar-right">
@@ -91,18 +101,6 @@
 							            <li><a href="courses.html">View all &raquo;</a></li>
 							        </ul>
 				                </li>
-				                <li class="dropdown">
-						            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
-
-						          	<ul class="dropdown-menu" role="menu">
-							          	<li><a href="#">Robotics</a></li>
-							          	<li class="divider"></li>
-							            <li><a href="#">HTML</a></li>
-							            <li><a href="#">Turing</a></li>
-							            <li><a href="#">Java</a></li>
-							            <li><a href="#">Android</a></li>
-							        </ul>
-						        </li>
 
 			                </ul>
 			            </div>
@@ -111,46 +109,48 @@
 		      </div>
 		    </div>
 		<!-- END NAV -->
+		<div class="container-fluid">
 
-		<div id="carousel" class="carousel slide shadow" data-ride="carousel">
-		  <!-- Indicators -->
-		    <ol class="carousel-indicators">
-			    <li data-target="#carousel" data-slide-to="0" class="active"></li>
-			    <li data-target="#carousel" data-slide-to="1"></li>
-			    <li data-target="#carousel" data-slide-to="2"></li>
-		    </ol>
+			<div id="carousel" class="carousel slide shadow" data-ride="carousel">
+			  <!-- Indicators -->
+			    <ol class="carousel-indicators">
+				    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+				    <li data-target="#carousel" data-slide-to="1"></li>
+				    <li data-target="#carousel" data-slide-to="2"></li>
+			    </ol>
 
-		  <!-- Wrapper for slides -->
-		    <div class="carousel-inner">
-		    	<div class="item active">
-		        	<img src="holder.js/1200x500" alt="...">
-		      		<div class="carousel-caption">
-		      		.AAAAAAAALOLCKOAKDWAODAWODJWAJDk <button class="btn btn-default">adauiwdhawdnow</button>
-		     		</div>
-		    	</div>
-			    <div class="item">
-			      	<img src="holder.js/1200x500" alt="...">
-			      	<div class="carousel-caption">
-			      	....
+			  <!-- Wrapper for slides -->
+			    <div class="carousel-inner">
+			    	<div class="item active">
+			        	<img src="holder.js/1200x500" alt="...">
+			      		<div class="carousel-caption">
+			      		.AAAAAAAALOLCKOAKDWAODAWODJWAJDk <button class="btn btn-default">adauiwdhawdnow</button>
+			     		</div>
 			    	</div>
-		    	</div>
-			    <div class="item">
-			      	<img src="holder.js/1200x500" alt="...">
-			      	<div class="carousel-caption">
-			      	....
+				    <div class="item">
+				      	<img src="holder.js/1200x500" alt="...">
+				      	<div class="carousel-caption">
+				      	....
+				    	</div>
 			    	</div>
-		    	</div>
+				    <div class="item">
+				      	<img src="holder.js/1200x500" alt="...">
+				      	<div class="carousel-caption">
+				      	....
+				    	</div>
+			    	</div>
 
+				</div>
+
+			  <!-- Controls -->
+				<a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+				    <span class="glyphicon glyphicon-chevron-left"></span>
+				</a>
+				<a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+				    <span class="glyphicon glyphicon-chevron-right"></span>
+				</a>
 			</div>
-
-		  <!-- Controls -->
-			<a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
-			    <span class="glyphicon glyphicon-chevron-left"></span>
-			</a>
-			<a class="right carousel-control" href="#carousel" role="button" data-slide="next">
-			    <span class="glyphicon glyphicon-chevron-right"></span>
-			</a>
-		</div>
+			</div>
 
 
 	    <div class="container marketing">
