--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<head>
 		<title>Home | Department of Computer Science </title>
 		<!-- FONTS -->
-		<link href="css/fontawesome.css" rel="stylesheet">
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 		<link href="styles.css" rel='stylesheet'>
-		<link href="css/bootstrap.css" rel="stylesheet">
+		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
 		<script src="js/jquery.js"></script>
-		<script src="js/bootstrap.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script src="js/holder.js"></script>
 		<script src="js/nicescroll.js"></script>
 
