--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				  <!-- Wrapper for slides -->
 				    <div class="carousel-inner" >
 				    	<div class="item active">
-				        	<img src="img/slide1.jpg" alt="...">
+				        	<img src="http://i.imgur.com/PjW6IvX.jpg" alt="...">
 				      		<div class="carousel-caption">
 				      		.AAAAAAAALOLCKOAKDWAODAWODJWAJDk <button class="btn btn-default">adauiwdhawdnow</button>
 				     		</div>
