--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				</div>
 
 
-		    <div class="container content">
+		    <div class="container-fluid content">
 
 		      <!-- Three columns of text below the carousel -->
 		        <div class="row">
