--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
 
 				  <!-- Wrapper for slides -->
 				    <div class="carousel-inner" >
-				    	<div class="item active">
+				    	<div class="item">
 				        	<img src="http://i.imgur.com/PjW6IvX.jpg" alt="...">
 				      		<div class="carousel-caption">
 				      		.AAAAAAAALOLCKOAKDWAODAWODJWAJDk <button class="btn btn-default">adauiwdhawdnow</button>
 				     		</div>
 				    	</div>
-					    <div class="item">
+					    <div class="item active">
 					      	<img src="holder.js/100x100/#bcf0a9:#96c087" alt="...">
 					      	<div class="carousel-caption">
 					      	....
@@ -179,7 +179,17 @@
 		          		<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
 		        	</div><!-- /.col-lg-4 -->
 		        </div><!-- /.row -->
+		        <br><br><br><br>
+		        <hr class="divider"></div>    
+			    <div class="footer">
+			    	<p class="os"> &copy; 2014 Markville Computer Science</p> 
+			    	<a href="https://twitter.com/yrdsb" class="twitter-follow-button" data-show-count="false">Follow @yrdsb</a>
+					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+					</script>
+			    </div>
 		    </div>
+
 	    </div>
+
 	</body>
 </html>
