--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 				     		</div>
 				    	</div>
 					    <div class="item active">
-					      	<img src="holder.js/100x100/#bcf0a9:#96c087" alt="...">
+					      	<img src="http://i.imgur.com/76CdsTx.jpg" alt="...">
 					      	<div class="carousel-caption">
 					      	....
 					    	</div>
 				    	</div>
 					    <div class="item">
-					      	<img src="holder.js/100x100/#bcf0a9:#96c087" alt="...">
+					      	<img src="http://i.imgur.com/g791wVJ.jpg" alt="...">
 					      	<div class="carousel-caption">
 					      	....
 					    	</div>
