--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 	</head>
 
-	<body>
+	<body class="os">
 		<div class="netscape" style="opacity:0; position:fixed; z-index:999999;">
 			<h1>WHY ARE YOU USING NETSCAPE</h1>
 		</div>
@@ -172,16 +172,16 @@
 			        <div class="col-md-4">
 			        	<span class="fa-stack fa-lg" style="font-size:5em;">
 				        	<i class="fa hover fa-circle-thin fa-stack-2x"></i>
-				            <i class="fa hover green fa-code"></i>
+				            <i class="fa hover red fa-play fa-stack-1x margin7"></i>
 			            </span>
-			            <h2>Heading</h2>
+			            <h2>Why Computer Science?</h2>
 			            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
 			            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
 			        </div><!-- /.col-lg-4 -->
 			        <div class="col-md-4">
 			           	<span class="fa-stack fa-lg" style="font-size:5em;">
 				        	<i class="fa hover fa-circle-thin fa-stack-2x"></i>
-				            <i class="fa hover green fa-code"></i>
+				            <i class="fa hover green fa-group" style="font-size:0.9em;"></i>
 			            </span>
 			           <h2>Heading</h2>
 			            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
