Clean up course page

--- a/courses.html
+++ b/courses.html
@@ -101,57 +101,71 @@
 		      </div>
 		</div>
 
+	<!-- END NAV -->
 
 		<div class="center content fix">
-			<div class="page-header">
-				<h1 style="padding-left:100px;">Courses <small> Markville Computer Science</small></h1>
+			<div class="container-fluid">
+					<div class="page-header">
+						<h1 style="padding-left:100px;">Courses <small> Markville Computer Science</small></h1>
+					</div>
+				<div class="row">
+					<div class="col-md-8">
+						<div class="bs-callout bs-callout-default">
+						<h1 style="float:left; color:#777; margin-top:-5px;">&nbsp;9</h1>
+						  	<h4 style="font-size:1.6em;">BTT1DG</h4>
+						    <a href="courses/btt101.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn" style="background-color:#777; color:#FFF"> Learn More &raquo;</button></a>
+						</div>
+						<div class="bs-callout bs-callout-primary">
+						<h1 style="float:left; color:#428BCA; margin-top:-5px;">10</h1>
+						  	<h4 style="font-size:1.6em;">ICS2DG</h4>
+						    <a href="courses/ics2dg.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-primary"> Learn More &raquo;</button></a>
+						</div>
+						<div class="bs-callout bs-callout-primary">
+						<h1 style="float:left; color:#428BCA; margin-top:-5px;">10</h1>
+						  	<h4 style="font-size:1.6em;">ICS2O1</h4>
+						    <a href="courses/ics2O1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-primary"> Learn More &raquo;</button></a>
+						</div>
+						<div class="bs-callout bs-callout-info">
+						<h1 style="float:left; color:#5DC0BE; margin-top:-5px;">11</h1>
+						  	<h4 style="font-size:1.6em;">ICS3U1</h4>
+						    <a href="courses/ics3u1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-info"> Learn More &raquo;</button></a>
+						</div>
+						<div class="bs-callout bs-callout-info">
+						<h1 style="float:left; color:#5DC0BE; margin-top:-5px;">11</h1>
+						  	<h4 style="font-size:1.6em;">ICS3C1</h4>
+						    <a href="courses/ics3c1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-info"> Learn More &raquo;</button></a>
+						</div>
+						<div class="bs-callout bs-callout-success">
+						<h1 style="float:left; color:#5CB85C; margin-top:-5px;">12</h1>
+						  	<h4 style="font-size:1.6em;">ICS4U1</h4>
+						    <a href="courses/ics4u1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-success"> Learn More &raquo;</button></a>
+						</div>
+						<div class="bs-callout bs-callout-success">
+						<h1 style="float:left; color:#5CB85C; margin-top:-5px;">12</h1>
+						  	<h4 style="font-size:1.6em;">ICS4C1</h4>
+						    <a href="courses/ics4c1.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn btn-success"> Learn More &raquo;</button></a>
+						</div>
+					</div>
+					<div class="col-md-4" style="border-left: 1px solid #eee; margin-top:25px;">
+						<h3>Need help?</h3>
+						<p>some text</p>
+						<br><br><br><br><br>
+						<h3>Still stuck?</h3>
+						<p>Contact info</p>
+					</div>
+				</div>
 			</div>
-			<div class="bs-callout bs-callout-primary">
-			  	<h4>BTT1DG &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			    <a href="courses/btt101.html"><button class="btn btn-info"> Learn More &raquo;</button></a>
-			    </h4>
-			</div>
-			<div class="bs-callout bs-callout-primary">
-			  	<h4>ICS2DG &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			    <a href="courses/ics2dg.html"><button class="btn btn-info"> Learn More &raquo;</button></a>
-			    </h4>
-			</div>
-			<div class="bs-callout bs-callout-primary">
-			  	<h4>ICS2O1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			    <a href="courses/ics2O1.html"><button class="btn btn-info"> Learn More &raquo;</button></a>
-			    </h4>
-			</div>
-			<div class="bs-callout bs-callout-primary">
-			  	<h4>ICS3U1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			    <a href="courses/ics3u1.html"><button class="btn btn-info"> Learn More &raquo;</button></a>
-			    </h4>
-			</div>
-			<div class="bs-callout bs-callout-primary">
-			  	<h4>ICS3C1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			    <a href="courses/ics3c1.html"><button class="btn btn-info"> Learn More &raquo;</button></a>
-			    </h4>
-			</div>
-			<div class="bs-callout bs-callout-primary">
-			  	<h4>ICS4U1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			    <a href="courses/ics4u1.html"><button class="btn btn-info"> Learn More &raquo;</button></a>
-			    </h4>
-			</div>
-			<div class="bs-callout bs-callout-primary">
-			  	<h4>ICS4C1 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			    <a href="courses/ics4c1.html"><button class="btn btn-info"> Learn More &raquo;</button></a>
-			    </h4>
-			</div>
-			<br><br>
-		        <hr class="divider"></hr>    
-			    <div class="footer">
-			    	<p class="os"> &copy; 2014 Markville Computer Science</p> 
-			    	<a href="https://twitter.com/yrdsb" class="twitter-follow-button" data-show-count="false">Follow @yrdsb</a>
-					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-					</script>
-			    </div>
 
+			<!-- START FOOTER -->
+			<br><br>
+	        <hr class="divider"></hr>    
+		    <div class="footer">
+		    	<p class="os"> &copy; 2014 Markville Computer Science</p> 
+		    	<a href="https://twitter.com/yrdsb" class="twitter-follow-button" data-show-count="false">Follow @yrdsb</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+				</script>
+		    </div>
 		</div>
 
-		<!-- END NAV -->
 	</body>
 </html>
