Fix touch detection on home screen

--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
 
 		</script>
 
+		<script>
+		$('.dropdown-toggle').click(function(e) {
+		  e.preventDefault();
+		  setTimeout($.proxy(function() {
+		    if ('ontouchstart' in document.documentElement) {
+		      $(this).siblings('.dropdown-backdrop').off().remove();
+		    }
+		  }, this), 0);
+		});
+		</script>
+
 		<script language="JavaScript">
 			browsername=navigator.appName;
 			if (browsername.indexOf("Netscape")!=-1) {
