Rereference JS library

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link href="css/styles.css" rel='stylesheet'>
 
 		<script src="js/jquery.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.js"></script>
 		<script src="js/holder.js"></script>
 		<script src="js/nicescroll.js"></script>
 
