--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				        <span class="icon-bar"></span>
 				    </button>
 			        
-			        <a class="navbar-brand" href="index.html">Markville Computer Science</a>
+			        <a class="navbar-brand" href="index.html">MKVL Comp Sci</a>
 			    
 			    </div>
 
