Move easter egg

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	</head>
 
 	<body class="os">
-		<div class="netscape" style="opacity:0; position:fixed; z-index:999999;">
+		<div class="netscape" style="opacity:0; position:fixed; margin-top: 500px;z-index:999999;">
 			<h1>WHY ARE YOU USING NETSCAPE</h1>
 		</div>
 		<div class="navbar-wrapper">
