Re-enable things/Reorder

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 		  });
 		});
 		</script>
-		<!--<script>
+		<script>
 			$(document).ready(
 			function() {
 			$("html").niceScroll({cursorcolor:"#0A0A10", cursorborder:"1px solid #A3A3A3", cursoropacitymin:0.1, cursorwidth:"7px"});
 			}
 			);
 
-		</script>-->
+		</script>
 
 		<script>
 		$('.dropdown-toggle').click(function(e) {
