--- a/courses.html
+++ b/courses.html
@@ -176,6 +176,9 @@
 						<br><br>
 						<h3>Still stuck?</h3>
 						<p>Contact info</p>
+						<br><br>
+						<h3>SHSM</h3>
+						<p>stuff</p>
 					</div>
 				</div>
 			</div>
