--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<!-- FONTS -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		
 		<link href="css/styles.css" rel='stylesheet'>
@@ -68,7 +69,7 @@
 		<div class="netscape" style="opacity:0; position:fixed; margin-top: 500px;z-index:999999;">
 			<h1>WHY ARE YOU USING NETSCAPE</h1>
 		</div>
-		<div class="navbar-wrapper">
+		<div class="navbar-wrapper ub">
 		    <div class="container">
 		        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		            <div class="container">
