--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				                <span class="icon-bar"></span>
 				                <span class="icon-bar"></span>
 			                </button>
-			                <a class="navbar-brand" href="#">Markville CompSci</a>
+			                <a class="navbar-brand" href="index.html">Markville CompSci</a>
 			            </div>
 			            <div class="navbar-collapse collapse">
 			                <ul class="nav navbar-nav">
@@ -92,13 +92,13 @@
 
 					          	<ul class="dropdown-menu" role="menu">
 						          	<li role="presentation" class="dropdown-header">Engineering</li>
-						          	<li><a href="#">Robotics</a></li>
+						          	<li><a href="gallery.html">Robotics</a></li>
 						          	<li class="divider"></li>
 					          	    <li role="presentation" class="dropdown-header">Programming</li>
-						            <li><a href="#">HTML</a></li>
-						            <li><a href="#">Turing</a></li>
-						            <li><a href="#">Java</a></li>
-						            <li><a href="#">Android</a></li>
+						            <li><a href="gallery.html#html">HTML</a></li>
+						            <li><a href="gallery.html#turing">Turing</a></li>
+						            <li><a href="gallery.html#java">Java</a></li>
+						            <li><a href="gallery.html#android">Android</a></li>
 						        </ul>
 					        </li>
 
