--- a/courses.html
+++ b/courses.html
@@ -69,7 +69,7 @@
 				                <span class="icon-bar"></span>
 				                <span class="icon-bar"></span>
 			                </button>
-			                <a class="navbar-brand" href="#">Markville CompSci</a>
+			                <a class="navbar-brand" href="index.html">Markville CompSci</a>
 			            </div>
 			            <div class="navbar-collapse collapse">
 			                <ul class="nav navbar-nav">
@@ -80,7 +80,7 @@
 						        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
 					          	<ul class="dropdown-menu" role="menu">
-						          	<li><a href="#">Robotics</a></li>
+						          	<li><a href="gallery.html#">Robotics</a></li>
 						          	<li class="divider"></li>
 						            <li><a href="#">HTML</a></li>
 						            <li><a href="#">Turing</a></li>
