Page info and update links to math changed files

--- a/courses.html
+++ b/courses.html
@@ -94,7 +94,7 @@
 			             		<li class="dropdown active">
 				                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
 						          	<ul class="dropdown-menu" role="menu">
-							            <li><a href="courses/btt101.html">BTT1DG</a></li>
+							            <li><a href="courses/btt1dg.html">BTT1DG</a></li>
 							            <li><a href="courses/ics2dg.html">ICS2DG</a></li>
 							            <li><a href="courses/ics2O1.html">ICS2O1</a></li>
 							            <li><a href="courses/ics3u1.html">ICS3U1</a></li>
@@ -125,7 +125,7 @@
 						<div class="bs-callout bs-callout-default">
 						<h1 style="float:left; color:#777; margin-top:0px;">9</h1>
 						  	<h4 style="font-size:1.6em;">BTT1DG</h4>
-						    <a href="courses/ics2dg.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn" style="background-color:#777; color:#FFF; margin-top:-10px;"> Learn More &raquo;</button></a>
+						    <a href="courses/btt1dg.html" style="float:right; display:inline; margin-top:-30px;"><button class="btn" style="background-color:#777; color:#FFF; margin-top:-10px;"> Learn More &raquo;</button></a>
 						</div>
 						<div class="bs-callout bs-callout-primary">
 						<h1 style="float:left; color:#428BCA; margin-top:0px;">10</h1>
