--- a/courses/btt101.html
+++ b/courses/btt101.html
@@ -10,7 +10,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-		<link href="css/styles.css" rel='stylesheet'>
+		<link href="../css/styles.css" rel='stylesheet'>
 
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
@@ -68,12 +68,12 @@
 						        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <span class="caret"></span></a>
 
 					          	<ul class="dropdown-menu" role="menu">
-						          	<li><a href="#">Robotics</a></li>
+						          	<li><a href="../gallery.html#robotics">Robotics</a></li>
 						          	<li class="divider"></li>
-						            <li><a href="#">HTML</a></li>
-						            <li><a href="#">Turing</a></li>
-						            <li><a href="#">Java</a></li>
-						            <li><a href="#">Android</a></li>
+						            <li><a href="../gallery.html#html">HTML</a></li>
+						            <li><a href="../gallery.html#turing">Turing</a></li>
+						            <li><a href="../gallery.html#java">Java</a></li>
+						            <li><a href="../gallery.html#android">Android</a></li>
 						        </ul>
 					        </li>
 
@@ -82,15 +82,15 @@
 			             		<li class="dropdown">
 				                    <a href="#" class="active dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
 						          	<ul class="dropdown-menu" role="menu">
-							            <li><a href="#">BTT1DG</a></li>
-							            <li><a href="#">ICS2DG</a></li>
-							            <li><a href="#">ICS2O1</a></li>
-							            <li><a href="#">ICS3U1</a></li>
-							            <li><a href="#">ICS3C1</a></li>
-							            <li><a href="#">ICS4U1</a></li>
-							            <li><a href="#">ICS4C1</a></li>
+							            <li class="active"><a href="#">BTT1DG</a></li>
+							            <li><a href="ics2dg.html">ICS2DG</a></li>
+							            <li><a href="ics201.html">ICS201</a></li>
+							            <li><a href="ics3u1.html">ICS3U1</a></li>
+							            <li><a href="ics3u1.html">ICS3C1</a></li>
+							            <li><a href="ics4u1.html">ICS4U1</a></li>
+							            <li><a href="ics4c1.html">ICS4C1</a></li>
 							            <li class="divider"></li>
-							            <li><a href="courses.html">View all &raquo;</a></li>
+							            <li><a href="../courses.html">View all &raquo;</a></li>
 							        </ul>
 				                </li>
 
@@ -102,17 +102,28 @@
 		</div>
 
 
-		<div class="center fix">
-			<div class="page-header" style="margin-left:100px;">
-				<h1>Courses <small> Markville Computer Science</small></h1>
+		<div class="center">
+			<div class="page-header" style="">
+				<h1 style="text-align:center;">9 - BTT1DG <small> Markville Computer Science</small></h1>
 			</div>
-			<div class="bs-callout bs-callout-default">
-			  	<h4>Default Callout</h4>
-			    This is a default callout.
+			<div class="bs-callout bs-callout-warning">
+			  	<h4>COURSE NOTE</h4>
+			    Students must be IPRC'd as Gifted. This is a two part course and is to be completed as a package: Part 1 in grade 9 and Part 2 in grade 10.
+			    Gifted courses proceed at a faster pace, and offer opportunities to explore topics at greater depth and in a wider variety of learning modes.
 			</div>
+			    <p style="padding-left:25px; padding-right:25px; text-align:justify; text-justify:inter-word;">
+This course combines curriculum from two courses: Grade 9 Introduction to Information Technology in Business (BTT10) and Grade 10 Introduction to Computer Studies (ICS2O). In Part 1, students will develop and enhance word processing, spreadsheet, and website design skills. Students will also be introduced to computer programming, where they will learn fundamental programming concepts. Students will also investigate the social impact of computer technologies, and develop an understanding of environmental and ethical issues related to the use of computers. Part 2 of this course is offered in grade 10 <a href="ics2dg.html">(ICS2DG).</a>
+				</p>
+				<br><br><br><br>
+        <hr class="divider"></hr>    
+	    <div class="footer">
+	    	<p class="os"> &copy; 2014 Markville Computer Science</p> 
+	    	<a href="https://twitter.com/yrdsb" class="twitter-follow-button" data-show-count="false">Follow @yrdsb</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+			</script>
+	    </div>
 
 		</div>
-
 		<!-- END NAV -->
 	</body>
 </html>
