--- a/courses/btt1dg.html
+++ b/courses/btt1dg.html
@@ -45,7 +45,8 @@
 	</head>
 
 	<body>
-<div class="navbar-wrapper">
+
+		<div class="navbar-wrapper">
 		    <div class="container">
 		        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		            <div class="container">
@@ -81,8 +82,8 @@
 			             		<li class="dropdown">
 				                    <a href="#" class="active dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
 						          	<ul class="dropdown-menu" role="menu">
-							            <li><a href="#">BTT1DG</a></li>
-							            <li class="active"><a href="ics2dg.html">ICS2DG</a></li>
+							            <li class="active"><a href="#">BTT1DG</a></li>
+							            <li><a href="ics2dg.html">ICS2DG</a></li>
 							            <li><a href="ics201.html">ICS201</a></li>
 							            <li><a href="ics3u1.html">ICS3U1</a></li>
 							            <li><a href="ics3u1.html">ICS3C1</a></li>
@@ -103,11 +104,7 @@
 
 		<div class="center">
 			<div class="page-header" style="">
-				<h1 style="text-align:center;">10 - ICS2DG <small> Markville Computer Science</small></h1>
-			</div>
-			<div class="bs-callout bs-callout-danger">
-			  	<h4>PREREQUISITE</h4>
-			    <a href="btt1dg.html">BTT1DG - Gifted Business/Computers - Part 1 </a>
+				<h1 style="text-align:center;">BTT1DG <small> Markville Computer Science</small></h1>
 			</div>
 			<div class="bs-callout bs-callout-warning">
 			  	<h4>COURSE NOTE</h4>
@@ -115,7 +112,7 @@
 			    Gifted courses proceed at a faster pace, and offer opportunities to explore topics at greater depth and in a wider variety of learning modes.
 			</div>
 			    <p style="padding-left:25px; padding-right:25px; text-align:justify; text-justify:inter-word;">
-This course combines curriculum from two courses: Grade 9 Introduction to Information Technology in Business (BTT10) and Grade 10 Introduction to Computer Studies (ICS2O). In Part 2, students will develop and enhance their database management, web design and desktop publishing skills. They will also expand their computer programming knowledge by learning more advanced programming concepts. Students will investigate the social impact of computer technologies, and develop an understanding of environmental and ethical issues related to the use of computers.
+This course combines curriculum from two courses: Grade 9 Introduction to Information Technology in Business (BTT10) and Grade 10 Introduction to Computer Studies (ICS2O). In Part 1, students will develop and enhance word processing, spreadsheet, and website design skills. Students will also be introduced to computer programming, where they will learn fundamental programming concepts. Students will also investigate the social impact of computer technologies, and develop an understanding of environmental and ethical issues related to the use of computers. Part 2 of this course is offered in grade 10 <a href="ics2dg.html">(ICS2DG).</a>
 				</p>
 				<br><br><br><br>
         <hr class="divider"></hr>    
@@ -127,8 +124,6 @@ This course combines curriculum from two courses: Grade 9 Introduction to Inform
 	    </div>
 
 		</div>
-		<!-- END NAV -->
-
 		<!-- END NAV -->
 	</body>
 </html>
