--- a/courses/ics201.html
+++ b/courses/ics201.html
@@ -102,14 +102,21 @@
 		</div>
 
 
-		<div class="center fix">
-			<div class="page-header" style="margin-left:100px;">
-				<h1>Courses <small> Markville Computer Science</small></h1>
+				<div class="center">
+			<div class="page-header" style="">
+				<h1 style="text-align:center;">10- ICS201 <small> Markville Computer Science</small></h1>
 			</div>
-			<div class="bs-callout bs-callout-default">
-			  	<h4>Default Callout</h4>
-			    This is a default callout.
-			</div>
+			    <p style="padding-left:25px; padding-right:25px; text-align:justify; text-justify:inter-word;">
+This course introduces students to computer programming. Students will plan and write simple computer programs by applying fundamental programming concepts, and learn to create clear and maintainable internal documentation. They will also learn to manage a computer by studying hardware configurations, software selection, operating system functions, networking, and safe computing practices. Students will also investigate the social impact of computer technologies, and develop an understanding of environmental and ethical issues related to the use of computers.
+				</p>
+				<br><br><br><br>
+        <hr class="divider"></hr>    
+	    <div class="footer">
+	    	<p class="os"> &copy; 2014 Markville Computer Science</p> 
+	    	<a href="https://twitter.com/yrdsb" class="twitter-follow-button" data-show-count="false">Follow @yrdsb</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+			</script>
+	    </div>
 
 		</div>
 
