Update link and active references across pages

--- a/courses/ics4c1.html
+++ b/courses/ics4c1.html
@@ -82,15 +82,15 @@
 			             		<li class="dropdown">
 				                    <a href="#" class="active dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
 						          	<ul class="dropdown-menu" role="menu">
-							            <li><a href="#">BTT1DG</a></li>
-							            <li><a href="#">ICS2DG</a></li>
-							            <li><a href="#">ICS2O1</a></li>
-							            <li><a href="#">ICS3U1</a></li>
-							            <li><a href="#">ICS3C1</a></li>
-							            <li><a href="#">ICS4U1</a></li>
-							            <li><a href="#">ICS4C1</a></li>
+							            <li><a href="btt1dg.html">BTT1DG</a></li>
+							            <li><a href="ics2dg.html">ICS2DG</a></li>
+							            <li><a href="ics201.html">ICS201</a></li>
+							            <li><a href="ics3u1.html">ICS3U1</a></li>
+							            <li><a href="ics3u1.html">ICS3C1</a></li>
+							            <li><a href="ics4u1.html">ICS4U1</a></li>
+							            <li class="active"><a href="ics4c1.html">ICS4C1</a></li>
 							            <li class="divider"></li>
-							            <li><a href="courses.html">View all &raquo;</a></li>
+							            <li><a href="../courses.html">View all &raquo;</a></li>
 							        </ul>
 				                </li>
 
