--- a/courses/ics2dg.html
+++ b/courses/ics2dg.html
@@ -81,7 +81,7 @@
 			             		<li class="dropdown">
 				                    <a href="#" class="active dropdown-toggle" data-toggle="dropdown">Courses <span class="caret"></span></a>
 						          	<ul class="dropdown-menu" role="menu">
-							            <li><a href="#">BTT1DG</a></li>
+							            <li><a href="btt1dg.html">BTT1DG</a></li>
 							            <li class="active"><a href="ics2dg.html">ICS2DG</a></li>
 							            <li><a href="ics201.html">ICS201</a></li>
 							            <li><a href="ics3u1.html">ICS3U1</a></li>
